# raider-vita

./: CMakeLists.txt  README.md
datafiles/tombraider/: transcode_tombraider1.bat  transcode_tombraider2.bat
datafiles/tombraider/locale/de/: strings.xml
datafiles/tombraider/locale/en/: strings.xml
datafiles/tombraider/locale/es/: strings.xml
datafiles/tombraider/locale/fr/: strings.xml
datafiles/tombraider/locale/it/: strings.xml
datafiles/tombraider/locale/pt-BR/: strings.xml
datafiles/tombraider/locale/pt-PT/: strings.xml
loader/: config.h  dialog.c  dialog.h  fmv.c  main.c  main.h  so_util.c  trophies.c  trophies.h
sce_sys/livearea/contents/: template.xml
sce_sys/trophy/RAID00001_00/: TROPHY.TRP
sce_sys/trophy/RAID00002_00/: TROPHY.TRP
selector/: main.c
